--- a/linux/.gitignore
+++ b/linux/.gitignore
@@ -1,1 +1,5 @@
 flutter/ephemeral
+# Remember to never publicly share your keystore.
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
+*.keystore
+*.jks
